--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "ecs:install-next": "npm install --save-dev decentraland-ecs@next"
   },
   "devDependencies": {
-    "decentraland-ecs": "^6.6.5"
+    "decentraland-ecs": "^6.6.6-1171091574.commit-b326675"
   },
   "dependencies": {
     "@dcl/ecs-quests": "^1.3.1",
